--- a/404.html
+++ b/404.html
@@ -46,6 +46,8 @@
                         <a href="http://stormyjet.com/code92/">Click here for Code<sup>92</sup></a>
                         <br>
                         <a href="http://stormyjet.com/create/">Click here for create<sub>3</sub></a>
+                        <br>
+                        <a href="http://stomryjet.com/project/">Click here for Project92</a>
                     </p>
                 </center>
                 <br>
