--- a/index.html
+++ b/index.html
@@ -1,12 +1,56 @@
 <html>
-<head>
-  <title>stormy's creative website</title>
-</head>
-<body>
-Reasons to live:<br>
-<ul>
-  <li> </li>
-</ul>
-</body>
-</html>
+<title>stormy's website</title>
 
+<script>
+    console.log("Don't look at my horrible code pls");
+</script>
+
+<head>
+    <!-- try to prefetch bg image-->
+    <link rel="prefetch" href="http://stormyjet.com/core/img/main-bg.jpg">
+    <!--css-->
+    <link rel="stylesheet" href="http://stormyjet.com/core/css/main.css">
+    <link rel="stylesheet" href="http://stormyjet.com/core/css/bootstrap.mod.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
+    <link rel="stylesheet" href="http://stormyjet.com/core/css/anims.css">
+    <div class="thisdivrocks">
+        <div class="container">
+            <div class="stage">
+                <div class="title-anims">
+                    <h1 class="actor" style="color:#FFFFFF">stormy's website</h1>
+                </div>
+            </div>
+        </div>
+</head>
+
+<body>
+    <div class="container">
+        <div class="anim-up">
+            <div class="jumbotron">
+                <h1 class="spotlight">Welcome></h1>
+                <center>
+                    I'm stormyjet and this is my website. There isnt much to do here.
+                    </p>
+                    <hr>
+                    <center>
+                        <iframe width="900" height="506" src="https://www.youtube.com/embed/8Yyzgl7gIbE?list=FLt8HTCubhlf6kn0JF9Qw4vA" frameborder="0" allowfullscreen></iframe>
+                    </center>
+                    <br>
+            </div>
+        </div>
+    </div>
+    </div>
+</body>
+<foot>
+    <center>
+        <br>
+        <p class="fancy" style="text-size:15px;"></p>
+        <p id="copy" class="legible">
+            <div style="float:right;margin-right:15px;">
+                <a style="text-decoration:none" class="fancy" href="http://stormyjet.com/create/">create<sub>3</sub><sup>7&#9916;</sup></a>
+            </div>
+    </center>
+</foot>
+<!-- end of code-->
+
+</html>
