--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container">
         <div class="anim-up">
             <div class="jumbotron">
-                <h1 class="spotlight">Welcome></h1>
+                <h1 class="spotlight">Welcome</h1>
                 <center>
                     I'm stormyjet and this is my website. There isnt much to do here.
                     </p>
