--- a/cdn/create/quicksetup.html
+++ b/cdn/create/quicksetup.html
@@ -1,22 +1,19 @@
 <html>
-<title>Create3</title>
-
-<script>
-    console.log("Don't look at my horrible code pls")
-</script>
+<title>Example Page using Create3</title>
 
 <head>
     <!-- try to prefetch bg image-->
-    <link rel="prefetch" href="../core/img/main-bg.jpg">
+    <link rel="prefetch" href="http://stormyjet.com/core/img/main-bg.jpg">
     <!--css-->
-    <link rel="stylesheet" href="../core/css/main.css">
-    <link rel="stylesheet" href="../core/css/bootstrap.mod.css">
-    <link rel="stylesheet" href="../core/css/anims.css">
+    <link rel="stylesheet" href="http://stormyjet.com/cdn/create/master/create.css">
     <div class="thisdivrocks">
+        <!--orignally a joke, but it kinda stuck, this is what defines the start of the static background -->
         <div class="container">
             <div class="stage">
                 <div class="title-anims">
-                    <h1 class="actor" style="color:#FFFFFF">create<sub>3</sub></h1>
+                    <!-- the come down animation -->
+                    <h1 class="actor" style="color:#FFFFFF">Example create<sub>3</sub> page</h1>
+                    <!-- if you want to have the background start after this, move <div class="thisdivrocks"> down to this line-->
                 </div>
             </div>
         </div>
@@ -26,9 +23,9 @@
     <div class="container">
         <div class="anim-up">
             <div class="jumbotron">
-                <h1 class="spotlight">Welcome to create<sub>3</sub></h1>
+                <h1 class="spotlight">Welcome to the example page</h1>
                 <center>
-                    <p class="fancy">create<sub>3</sub> is a CSS framework that seamlessly works with Bootstrap.
+                    <p class="fancy">You can put a tagline if you wanted here. </p>
 
                 </center>
                 </p>
