--- a/cdn/create/quicksetup.html
+++ b/cdn/create/quicksetup.html
@@ -6,6 +6,7 @@
     <link rel="prefetch" href="http://stormyjet.com/core/img/main-bg.jpg">
     <!--css-->
     <link rel="stylesheet" href="http://stormyjet.com/cdn/create/master/create.css">
+    <!-- for simplicity, bootstrap is included (however it is modified), you can use an non-included one at stormyjet.com/cdn/create/custom/nobootstrap.css-->
     <div class="thisdivrocks">
         <!--orignally a joke, but it kinda stuck, this is what defines the start of the static background -->
         <div class="container">
@@ -30,48 +31,28 @@
                 </center>
                 </p>
                 <hr>
-                <p class="fancy">create<sub>3</sub> is a new stylesheet for the next generation of web design. Working seamlessly with Bootstrap to help everyone see your message.
-                    <br>
-
-                    <h3>Advantages:</h3>
-                    <hr>
-                    <ul class="fancy">
-                        <li class="fancy" style="font-size:15px;">Looks fantastic</li>
-                        <li class="fancy" style="font-size:15px;">Simple</li>
-                        <li class="fancy" style="font-size:15px;">Lightweight</li>
-                        <li class="fancy" style="font-size:15px;">Easy to use</li>
-                        <li class="fancy" style="font-size:15px;">Built With Bootstrap</li>
-                        <li class="fancy" style="font-size:15px;">Works seamlessly with anything else</li>
-                    </ul>
+                <p class="fancy">
+                    <!-- using horizontal rules to seperate content is your best bet. it is simple and effective -->
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare neque nec nibh efficitur, at sodales nisl finibus. Duis in dui nisi. Donec aliquet, eros nec ornare tempus, libero ligula commodo ex, nec viverra felis odio ac lacus. Quisque sed risus et nibh varius tincidunt. Quisque iaculis orci sem, vitae tempus elit placerat a. Interdum et malesuada fames ac ante ipsum primis in faucibus. Mauris felis nulla, varius sed libero vel, pellentesque congue odio. Pellentesque sed velit vel nibh cursus consectetur sed et ex. Vivamus imperdiet vestibulum mauris at dictum.
                 </p>
-                <center>
-                    <h3>Download it today!</h3>
-                </center>
                 <hr>
-                <center>
-                    <div class="alert alert-success">
-                        <a href="../cdn/create/master/create.css" class="alert-link">Click here for the latest build</a>
-                        <br> You could <strong>download the css file</strong> or <strong>link that directly in your code for fast updates!</strong>
-                    </div>
-
-                    <div class="alert alert-info">
-                        Want to have your custom create<sub>3</sub> stylesheet hosted here for quicker updates?
-                        <br>
-                        <a href="https://github.com/stormyjet/stormyjet.github.io/new/master/cdn/create" class="alert-link">Click here to paste in your code to request that </a>
-                        <br>
-                        <small>Powered by Storm<sup>CDN</sup></small>
-                    </div>
+                <p class="fancy">
+                    <br> Integer bibendum libero in hendrerit tristique. Donec vitae fermentum felis. Cras aliquet ut augue non interdum. Cras fermentum lectus id gravida auctor. Cras efficitur, purus vel ultricies gravida, ante lorem imperdiet libero, ac tincidunt ligula arcu non est. Nunc pulvinar elit mauris, sit amet tempus tellus maximus in. Proin facilisis iaculis mauris, a facilisis orci iaculis sed. Phasellus quis odio eu ante vestibulum condimentum sit amet vitae turpis. Donec congue, eros at eleifend vehicula, risus libero tempus odio, vel feugiat magna velit sit amet lectus.
+                </p>
+                <hr>
+                <p class="fancy">
+                    <br> Cras sagittis, magna id condimentum porttitor, nisl diam tempus sem, ut auctor quam nisl ac massa. Proin nunc orci, blandit et luctus quis, fringilla id lectus. Ut posuere lectus non mauris ornare, ut consequat magna volutpat. Aenean eget massa quis eros dignissim facilisis. Nunc porta felis ut dui dapibus, ac scelerisque leo auctor. Duis lobortis vitae turpis ut consequat. Praesent consectetur sem in malesuada pellentesque. Vestibulum mollis, ex sed scelerisque mattis, ligula arcu tempus elit, vel cursus eros arcu et metus. Cras ligula nisi, hendrerit a nunc id, posuere tincidunt nisl.
+                </p>
+                <hr>
+                <p class="fancy">
+                    <br> Morbi in iaculis mauris. Morbi finibus feugiat felis et sodales. Phasellus suscipit lectus elementum imperdiet rutrum. Duis venenatis tortor ut efficitur convallis. Etiam fermentum, odio ac aliquet convallis, nisi tellus aliquet est, fringilla aliquam purus nisl id purus. Proin id turpis neque. In pellentesque, augue eu pharetra cursus, leo enim luctus nunc, nec ullamcorper ante enim consequat nunc. Pellentesque eget ante sit amet purus placerat lobortis nec vitae ligula. Nulla non suscipit neque. Cras pharetra est quis neque pharetra, et efficitur augue mollis. Suspendisse vitae lobortis felis. Donec blandit purus a nisi efficitur varius. Proin nisl ante, condimentum a dictum in, auctor quis enim. Mauris ac rhoncus neque.
+                </p>
+                <hr>
+                <p class="fancy">
+                    <br> In pellentesque vitae dolor eu efficitur. Maecenas consequat lobortis leo, ut tempor lorem malesuada at. Proin nec massa enim. Nunc efficitur accumsan mauris, non pharetra libero tempor eget. Cras diam urna, aliquam a ligula maximus, vulputate tempus lectus. Nunc facilisis auctor enim sit amet molestie. Nam purus odio, ultrices vitae consectetur ac, tristique mattis neque. Suspendisse posuere finibus mi, sed elementum risus lacinia ac. In quam tortor, faucibus vel ex sed, suscipit tempus tellus. Fusce at lacus quam. Sed porta vitae arcu sed lobortis. Duis ut ante nunc.
                     <br>
-
-                    <hr>
-                    <p class="fancy">Getting set up:
-                        <br> Getting setup with a new stylesheet can be a pain. I get it. Luckily create is very simple to get setup and get going!
-
-                    </p>
-
-
-                </center>
-                <br>
+                    </center>
+                    <br>
             </div>
         </div>
     </div>
@@ -82,11 +63,8 @@
         <br>
         <div style="float:right;margin-right:15px;">
             <a style="text-decoration:none" class="fancy" href="create/">create<sub>3</sub><sup>7&#9916;</sup></a>
+            <!-- you don't have to put this, but it would be nice if you did. if you wanted tyou could also put <a style="text-decoration:none" class="fancy" href="create/">c<sub>3</sub></a> or something simpler if you have something in mind. -->
         </div>
-        <p class="legible" style="font-size:15px;">Custom create<sub>3</sub> stylesheets are hosted <b>free of charge</b> using Storm<sup>CDN</sup>.
-            <br>They are uploaded using GitHub Pull Requests.
-            <br> If any tampering with non-custom sheets is found, the custom create<sub>3</sub> stylesheet will be terminated with no chance of being put back. Choose carefully.
-        </p>
     </center>
 </foot>
 <!-- end of code-->
