--- a/create/index.html
+++ b/create/index.html
@@ -69,6 +69,8 @@
                     <hr>
                     <p class="fancy">Getting set up:
                         <br> Getting setup with a new stylesheet can be a pain. I get it. Luckily create is very simple to get setup and get going!
+                        <br>
+                        <a href="../cdn/create/quicksetup.html">You can view and download an already setup page here</a>
 
                     </p>
 
