--- a/code92/index.html
+++ b/code92/index.html
@@ -1,6 +1,11 @@
 <html>
-coming soon!
+<center>
+    <title>Coming Soon...</title>
 
-<a href="../">click here for the homepage!</a>
+    <body>
+        This website is coming soon.
+        <br><a href="../index.html">Click here for the homepage</a>
+    </body>
+</center>
 
 </html>
