--- a/create/index.html
+++ b/create/index.html
@@ -18,6 +18,9 @@
                 <div class="title-anims">
                     <h1 class="actor" style="color:#FFFFFF">create<sub>3</sub></h1>
                 </div>
+                <center><a class="fancy" style="color:#ffffff" href="http://stormyjet.com">Home</a>-
+                    <!--<a class="fancy" style="color:#ffffff" href="code92/index.html">Code92</a>--><a class="fancy" style="color:#ffffff" href="project/index.html">Project92</a>-<a class="fancy" style="color:#aaaaaa" href="create/">Create</a>
+                </center>
             </div>
         </div>
 </head>
