--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
             <div class="stage">
                 <div class="title-anims">
                     <h1 class="actor" style="color:#FFFFFF">stormy's website</h1>
+
                 </div>
+                <center><a class="fancy" style="color:#aaaaaa" href="/">Home</a>-
+                    <!--<a class="fancy" style="color:#ffffff" href="code92/index.html">Code92</a>---><a class="fancy" style="color:#ffffff" href="project/index.html">Project92</a>-<a class="fancy" style="color:#ffffff" href="create/">Create</a>
+                </center>
             </div>
         </div>
 </head>
