--- a/project/index.html
+++ b/project/index.html
@@ -14,7 +14,11 @@
             <div class="title-anims">
                 <h1 class="actor" style="color:#FFFFFF"><img src="logofinal.png"></h1>
                 <br>
+
             </div>
+            <center><a class="fancy" style="color:#ffffff" href="http://stormyjet.com">Home</a>-
+                <!--<a class="fancy" style="color:#ffffff" href="code92/index.html">Code92</a>--><a class="fancy" style="color:aaaaaa" href="/">Project92</a>-<a class="fancy" style="color:#ffffff" href="create/">Create</a>
+            </center>
         </div>
     </div>
 </head>
