--- a/project/index.html
+++ b/project/index.html
@@ -16,8 +16,8 @@
                 <br>
 
             </div>
-            <center><a class="fancy" style="color:#ffffff" href="http://stormyjet.com">Home</a>-
-                <!--<a class="fancy" style="color:#ffffff" href="code92/index.html">Code92</a>--><a class="fancy" style="color:aaaaaa" href="/">Project92</a>-<a class="fancy" style="color:#ffffff" href="create/">Create</a>
+            <center><a class="fancy" style="color:#000000" href="http://stormyjet.com">Home</a>-
+                <!--<a class="fancy" style="color:#ffffff" href="code92/index.html">Code92</a>--><a class="fancy" style="color:aaaaaa" href="/">Project92</a>-<a class="fancy" style="color:#000000" href="create/">Create</a>
             </center>
         </div>
     </div>
