--- a/memer/index.html
+++ b/memer/index.html
@@ -32,14 +32,7 @@
 <button class="button" onclick="startAdventure()">Make me a random meme!</button>
     </center></h3>
 <center>
-    <h2><div id="wildStatus"></div>
-    <div id="playerStatus"></div>
+    <h2>Woah-o we're halfway there / Woah...<br>
         <div id="battleStatus"></div></h2>
-    <h3><div id="counters"></div></h3>
-    <!--(for debugging)
-<hr>
-<br>
---><div id="remainP"></div>
-<div id="remainW"></div>
 
 </html>
