--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <h1 class="actor" style="color:#FFFFFF">stormy's website</h1>
 
                 </div>
-                <center><a class="fancy" style="color:#aaaaaa" href="/">Home</a>-
-                    <!--<a class="fancy" style="color:#ffffff" href="code92/index.html">Code92</a>---><a class="fancy" style="color:#ffffff" href="project/index.html">Project92</a>-<a class="fancy" style="color:#ffffff" href="create/">Create</a>
+                <!--<center><a class="fancy" style="color:#aaaaaa" href="/">Home</a>-
+                    <!--<a class="fancy" style="color:#ffffff" href="code92/index.html">Code92</a>---><!--<a class="fancy" style="color:#ffffff" href="project/index.html">Project92</a>-<a class="fancy" style="color:#ffffff" href="create/">Create</a>-->
                 </center>
             </div>
         </div>
@@ -31,11 +31,11 @@
     <div class="container">
         <div class="anim-up">
             <div class="jumbotron">
-                <h1 class="spotlight">Welcome</h1>
+               <!-- <h1 class="spotlight">Welcome</h1>
                 <center>
                     I'm stormyjet and this is my website. There isnt much to do here.
                     </p>
-                    <hr>
+                    <hr>-->
                     <center>
                         <iframe width="900" height="506" src="https://www.youtube.com/embed/8Yyzgl7gIbE?list=FLt8HTCubhlf6kn0JF9Qw4vA" frameborder="0" allowfullscreen></iframe>
                     </center>
