--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     <center>
         <br>
         <p class="fancy" style="text-size:15px;"></p>
-        <p id="copy" class="legible">
+        <!--<p id="copy" class="legible">
             <div style="float:right;margin-right:15px;">
                 <a style="text-decoration:none" class="fancy" href="http://stormyjet.com/create/">create<sub>3</sub><sup>7&#9916;</sup></a>
-            </div>
+            </div>-->
     </center>
 </foot>
 <!-- end of code-->
