--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                 </div>
                 <!--<center><a class="fancy" style="color:#aaaaaa" href="/">Home</a>-
-                    <!--<a class="fancy" style="color:#ffffff" href="code92/index.html">Code92</a>---><!--<a class="fancy" style="color:#ffffff" href="project/index.html">Project92</a>-<a class="fancy" style="color:#ffffff" href="create/">Create</a>-->
+                    <a class="fancy" style="color:#ffffff" href="code92/index.html">Code92</a><!--<a class="fancy" style="color:#ffffff" href="project/index.html">Project92</a>-<a class="fancy" style="color:#ffffff" href="create/">Create</a>-->
                 </center>
             </div>
         </div>
@@ -37,7 +37,8 @@
                     </p>
                     <hr>-->
                     <center>
-                        <iframe width="900" height="506" src="https://www.youtube.com/embed/8Yyzgl7gIbE?list=FLt8HTCubhlf6kn0JF9Qw4vA" frameborder="0" allowfullscreen></iframe>
+                        <iframe width="900" height="506" src="https://www.youtube.com/embed/do_uiMZkT94?list=FLt8HTCubhlf6kn0JF9Qw4vA" frameborder="0" allowfullscreen></iframe>
+                        
                     </center>
                     <br>
             </div>
