--- a/project/index.html
+++ b/project/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="stage">
             <div class="title-anims">
-                <h1 class="actor" height="500" width="124" style="color:#FFFFFF"><img src="globallogo.png"></h1>
+                <h1 class="actor" width="500" height="124" style="color:#FFFFFF"><img src="globallogo.png"></h1>
                 <br>
 
             </div>
