--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
                         <script>
                             document.write(document.URL)
                         </script>
-                        isn't actually real
+                        doesn't exist.
 
                 </center>
                 </p>
