--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
     <div class="container">
         <div class="anim-up">
             <div class="jumbotron">
-               <!-- <h1 class="spotlight">Welcome</h1>
+               <h1 class="spotlight">Welcome</h1>
                 <center>
                     I'm stormyjet and this is my website. There isnt much to do here.
                     </p>
-                    <hr>-->
-                    <center>
+                    <hr>
+                    <center><br>
+                        <p> Enjoy your stay. </p>
                         <iframe width="900" height="506" src="https://www.youtube.com/embed/X0jKEiodVPI?list=FLt8HTCubhlf6kn0JF9Qw4vA" frameborder="0" allowfullscreen></iframe>
                         
                     </center>
