--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="jumbotron">
                <h1 class="spotlight">Welcome</h1>
                 <center>
-                    I'm stormyjet and this is my website. There isnt much to do here.
+                    Thank u for visiting
                     </p>
                     <hr>
                     <center><br>
