--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
             <div class="jumbotron">
                <h1 class="spotlight">Welcome</h1>
                 <center>
-                    Thank u for visiting
+                   <p class="fancy"> 
+                       Thank u for visiting
                     </p>
                     <hr>
                     <center><br>
