--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                     <hr>
                     <center><br>
                         <p class="fancy"> Things I've made: <br>
-                        <a href="http://thefanha.us/time">Multi Timezone clock (for international purposes)</a>
-                            <a href="http://markisprofessional.com">Portfolio</a>
+                        <a href="http://thefanha.us/time">Multi Timezone clock (for international purposes)</a><br>
+                            <a href="http://markisprofessional.com">Portfolio</a><br>
                             <a href="http://markisprofessional.com/cdn/poke/">poke.js</a></p>
-                        <p> Enjoy your stay. </p>
+                        <p class="fancy"> Enjoy your stay. </p>
                         <iframe width="900" height="506" src="https://www.youtube.com/embed/X0jKEiodVPI?list=FLt8HTCubhlf6kn0JF9Qw4vA" frameborder="0" allowfullscreen></iframe><br><hr>
                         
                     </center>
