--- a/404.html
+++ b/404.html
@@ -6,6 +6,15 @@
 </script>
 
 <head>
+    
+<link rel="apple-touch-icon" sizes="180x180" href="/core/img/icon/apple-touch-icon.png">
+<link rel="icon" type="image/png" href="/core/img/icon/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="/core/img/icon/favicon-16x16.png" sizes="16x16">
+<link rel="manifest" href="/core/img/icon/manifest.json">
+<link rel="mask-icon" href="/core/img/icon/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="shortcut icon" href="/core/img/icon/favicon.ico">
+<meta name="msapplication-config" content="/core/img/icon/browserconfig.xml">
+<meta name="theme-color" content="#ffffff">
     <!-- try to prefetch bg image-->
     <link rel="prefetch" href="http://stormyjet.com/core/img/main-bg.jpg">
     <!--css-->
