--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
         <h3 style="float:left;"><span style="color:white;">stormy</span></h3>
         <h3 class="text-muted" style="float:left;">jet</h3></div>
       <div class="nav-items">
-        <a href="http://stormyjet.com" class="btn btn-primary disabled" role="button">stormyjet.com</a>   
-        <a href="http://markis.pro/" class="btn btn-primary" role="button">markis.pro</a>
-          <a href="http://blog.markis.pro/" class="btn btn-primary" role="button">blog</a>
+        <a href="http://stormyjet.com" class="btn btn-primary disabled" role="button">stormy.</a>   
+        <a href="http://rungus.zone/" class="btn btn-primary" role="button">rungus.zone</a>
       </div>
     </nav>
   </head>
@@ -57,7 +56,7 @@
 <foot>
     
 tracking collected by google analytics<br> install <a href="https://tools.google.com/dlpage/gaoptout">this</a> to opt out
- <br></center><hr> <p>stormyjet.com is now part of markis.pro<br>&copy; 2018 markisprofessional</p>
+ <br></center><hr> <p>&copy; rungus </p>
 </foot>
 <!-- scripts -->
 <script>
