--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link href="http://cdn.markisprofessional.com/main/css/darkbootstrap.css" rel="stylesheet">
-<title>mark isn't professional - markis.pro</title>
+<title>stormy.rungus.zone</title>
 <div class="container">
  <div class="nocss">
     <center>
@@ -31,7 +31,7 @@
     <nav class="nav-main">
       <div class="nav-title">
         <h3 style="float:left;"><span style="color:white;">stormy</span></h3>
-        <h3 class="text-muted" style="float:left;">jet</h3></div>
+        <h3 class="text-muted" style="float:left;">.rungus.zone</h3></div>
       <div class="nav-items">
         <a href="http://stormyjet.com" class="btn btn-primary disabled" role="button">stormy.</a>   
         <a href="http://rungus.zone/" class="btn btn-primary" role="button">rungus.zone</a>
