--- a/404.html
+++ b/404.html
@@ -1,74 +1,151 @@
-<html>
-<title>stormy's website</title>
-
-<script>
-    console.log("Don't look at my horrible code pls");
-</script>
+<!DOCTYPE html>
+<!--required business procedures-->
+<html lang="en">
 
 <head>
-    
-<link rel="apple-touch-icon" sizes="180x180" href="/core/img/icon/apple-touch-icon.png">
-<link rel="icon" type="image/png" href="/core/img/icon/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="/core/img/icon/favicon-16x16.png" sizes="16x16">
-<link rel="manifest" href="/core/img/icon/manifest.json">
-<link rel="mask-icon" href="/core/img/icon/safari-pinned-tab.svg" color="#5bbad5">
-<link rel="shortcut icon" href="/core/img/icon/favicon.ico">
-<meta name="msapplication-config" content="/core/img/icon/browserconfig.xml">
-<meta name="theme-color" content="#ffffff">
-    <!-- try to prefetch bg image-->
-    <link rel="prefetch" href="http://stormyjet.com/core/img/main-bg.jpg">
-    <!--css-->
-    <link rel="stylesheet" href="http://stormyjet.com/core/css/main.css">
-    <link rel="stylesheet" href="http://stormyjet.com/core/css/bootstrap.mod.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
-    <link rel="stylesheet" href="http://stormyjet.com/core/css/anims.css">
-    <div class="thisdivrocks">
-        <div class="container">
-            <div class="stage">
-                <div class="title-anims">
-                    <h1 class="actor" style="color:#FFFFFF">stormy's website</h1>
-                </div>
-            </div>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.rungus.zone/v2/css/darkbootstrap.min.css">
+  <script src="https://cdn.rungus.zone/v2/js/jquery.min.js"></script>
+  <script src="https://cdn.rungus.zone/v2/js/bootstrap.bundle.min.js"></script>
+  <link rel="apple-touch-icon" sizes="120x120" href="https://cdn.rungus.zone/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.rungus.zone/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.rungus.zone/favicons/favicon-16x16.png">
+  <link rel="manifest" href="https://cdn.rungus.zone/favicons/site.webmanifest">
+  <link rel="mask-icon" href="https://cdn.rungus.zone/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="https://cdn.rungus.zone/favicons/favicon.ico">
+  <meta name="apple-mobile-web-app-title" content="rungus zone">
+  <meta name="application-name" content="rungus zone">
+  <meta name="msapplication-TileColor" content="#69f0ae">
+  <meta name="msapplication-config" content="https://cdn.rungus.zone/favicons/browserconfig.xml">
+  <meta name="theme-color" content="#69f0ae">
+  <meta property="og:title" content="rungus zone">
+  <meta property="og:url" content="https://rungus.zone">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://cdn.rungus.zone/profile.gif">
+  <meta property="og:description" content="look mom i'm in an open graph">
+  <meta name="theme-color" content="#69f0ae" />
+  <!-- how did we let it get this way -->
+  <script>
+    $(function() {
+      $('[data-toggle="popover"]').popover()
+    })
+  </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-SD2H63G7CK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-SD2H63G7CK');
+  </script>
+  <div class="nocss" style="font-family:sans-serif;">
+    <hr>
+    <center>
+      <h1 style="font-size:50px;">something has gone wrong</h1>
+    </center>
+    <p style="font-size:150%;">this page is being loaded without any styling. you either have a slow connection, the cdn is down, or you're looking at the source code. at least it still looks alright, but this is not the design of the actual page.
+      <!-- hello! -->
+      <br>
+      <center>
+        <h3 style="font-size:150%">maybe try <a href="https://rungus.zone">refreshing?</a></h3>
+      </center>
+    </p>
+    <hr>
+  </div>
+</head>
+<!-- the meat and potatoes-->
+<title>rungus zone</title>
+<nav class="navbar navbar-expand-lg fixed-bottom navbar-dark bg-dark">
+  <a href="../" class="navbar-brand" style="font-size:200%;"><span style="color:#69f0ae;">r</span>ungus<span class="text-muted">.zone</span></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarResponsive">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" href="https://blog.rungus.zone">blog</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" data-toggle="popover" title="my portfolio is coming soon" data-placement="top"
+          data-content="ok look i just started this website and i have to consolidate so many other ones for this so give me some time thank you">portfolio</a>
+      </li>
+      <li class="nav-item dropdown dropup">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download">experiments <span class="caret"></span></a>
+        <div class="dropdown-menu" aria-labelledby="download">
+          <a class="dropdown-item" href="randomizer">enter the randomizer</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="time">time</a>
         </div>
+      </li>
+      <li class="nav-item dropdown dropup">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="download">socials <span class="caret"></span></a>
+        <div class="dropdown-menu" aria-labelledby="download">
+          <a class="dropdown-item" href="https://www.youtube.com/channel/UCt8HTCubhlf6kn0JF9Qw4vA">subscribe on youtube</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="https://twitter.com/_rungus" role="button">follow on twitter</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="https://d.rungus.zone/" role="button">join my discord</a>
+        </div>
+      </li>
+    </ul>
+  </div>
+</nav>
 </head>
 
-<body>
-    <div class="container">
-        <div class="anim-up">
-            <div class="jumbotron">
-                <h1 class="spotlight">404</h1>
-                <center>
-                    <p class="fancy" id="url">
-                        <script>
-                            document.write(document.URL)
-                        </script>
-                        doesn't exist.
-
-                </center>
-                </p>
-                <hr>
-                <center>
-                    <p class="fancy">Fantastic! You managed to get yourself lost. I hope you're happy.
-                        <br>
-                        <a href="http://stormyjet.com/">Click here to go back to the homepage.</a>
-                    </p>
-                </center>
-                <br>
-            </div>
+<body style="padding-top:30px;">
+  <!-- the header -->
+  <div class="container">
+    <div class="page-header" id="banner">
+      <div class="row">
+        <div class="col-12 col-lg-8 col-md-7 col-sm-9">
+          <h1 style="font-size:150px;">you're lost.</span></h1>
+          <h3>you should not be here</h3>
         </div>
+      </div>
     </div>
+    <hr>
+    <!-- the body -->
+    <div class="bs-docs-section clearfix">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="page-header">
+            <h5>this is the remnants of my old website, where i still have some critical files for my older projects. there is nothing here for you.</h5>
+          </div>
+          <p class="lead">This place is a message... and part of a system of messages... pay attention to it!
+
+            Sending this message was important to us. We considered ourselves to be a powerful culture.
+
+            This place is not a place of honor... no highly esteemed deed is commemorated here... nothing valued is here.
+
+            What is here was dangerous and repulsive to us. This message is a warning about danger.
+
+            The danger is in a particular location... it increases towards a center... the center of danger is here... of a particular size and shape, and below us.
+
+            The danger is still present, in your time, as it was in ours.
+
+            The danger is to the body, and it can kill.
+
+            The form of the danger is an emanation of energy.
+
+            The danger is unleashed only if you substantially disturb this place physically. This place is best shunned and left uninhabited.</p>
+        </div>
+      </div>
+      <div class="row">
+        <h1><a href="https://rungus.zone">return to the rungus zone</a></h1>
+      </div>
+
     </div>
+    <hr>
+    <!-- the footnotes -->
+
+    </footer>
+  </div>
+
+
 </body>
-<foot>
-    <center>
-        <br>
-        <p class="fancy" style="text-size:15px;"></p>
-        <p id="copy" class="legible">
-            <div style="float:right;margin-right:15px;">
-                <a style="text-decoration:none" class="fancy" href="http://stormyjet.com/create/">create<sub>3</sub><sup>7&#9916;</sup></a>
-            </div>
-    </center>
-</foot>
-<!-- end of code-->
 
 </html>
