--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
   <link rel="manifest" href="https://cdn.rungus.zone/favicons/site.webmanifest">
   <link rel="mask-icon" href="https://cdn.rungus.zone/favicons/safari-pinned-tab.svg" color="#5bbad5">
   <link rel="shortcut icon" href="https://cdn.rungus.zone/favicons/favicon.ico">
-  <meta name="apple-mobile-web-app-title" content="rungus zone">
+  <meta name="apple-mobile-web-app-title" content="you shouldn't be here">
   <meta name="application-name" content="rungus zone">
   <meta name="msapplication-TileColor" content="#69f0ae">
   <meta name="msapplication-config" content="https://cdn.rungus.zone/favicons/browserconfig.xml">
   <meta name="theme-color" content="#69f0ae">
-  <meta property="og:title" content="rungus zone">
+  <meta property="og:title" content="this is not a place of honor">
   <meta property="og:url" content="https://rungus.zone">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://cdn.rungus.zone/profile.gif">
-  <meta property="og:description" content="look mom i'm in an open graph">
+  <meta property="og:description" content="This place is a message... and part of a system of messages... pay attention to it! Sending this message was important to us. We considered ourselves to be a powerful culture. This place is not a place of honor... no highly esteemed deed is commemorated here... nothing valued is here. What is here was dangerous and repulsive to us. This message is a warning about danger. The danger is in a particular location... it increases towards a center... the center of danger is here... of a particular size and shape, and below us. The danger is still present, in your time, as it was in ours. The danger is to the body, and it can kill. The form of the danger is an emanation of energy. The danger is unleashed only if you substantially disturb this place physically. This place is best shunned and left uninhabited.">
   <meta name="theme-color" content="#69f0ae" />
   <!-- how did we let it get this way -->
   <script>
